k8s/django/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      component: django
  template:
    metadata:
      labels:
        component: django
    spec:
#      initContainers:
#        - name: django-init
#          image: stas33/django
#          command: ["/bin/bash"]
#          args: ["-c", "python manage.py makemigrations && python manage.py migrate"]
      volumes:
        - name:  django-app-persistent-volume-storage
          persistentVolumeClaim:
            claimName: djangoapp-pvc-claim
      containers:
        - name: django
          image: stas33/django-app
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
          volumeMounts:
            - name: django-app-persistent-volume-storage
              mountPath: /Users/anastasisgkikas/Dissertation/inventory-project/inventoryproject/static/img
#              subPath: postgres
